--- a/RecordProcessor.AcceptanceTests/RecordProcessor.AcceptanceTests.csproj
+++ b/RecordProcessor.AcceptanceTests/RecordProcessor.AcceptanceTests.csproj
@@ -30,8 +30,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac, Version=3.5.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.3.5.2\lib\net40\Autofac.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Rhino.Mocks, Version=3.6.0.0, Culture=neutral, PublicKeyToken=0b3305902db7183f, processorArchitecture=MSIL">
+      <HintPath>..\packages\RhinoMocks.3.6.1\lib\net\Rhino.Mocks.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -43,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Application\TestApplication.cs" />
     <Compile Include="Console\TestContainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -50,6 +59,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\RecordProcessor.Application\RecordProcessor.Application.csproj">
+      <Project>{F084CEBA-B84E-4431-847E-B3105D342A10}</Project>
+      <Name>RecordProcessor.Application</Name>
+    </ProjectReference>
     <ProjectReference Include="..\RecordProcessor.Console\RecordProcessor.Console.csproj">
       <Project>{54CB2539-E4DE-49D4-BA66-D2DE0284639F}</Project>
       <Name>RecordProcessor.Console</Name>
