--- a/RecordProcessor.UnitTests/RecordProcessor.UnitTests.csproj
+++ b/RecordProcessor.UnitTests/RecordProcessor.UnitTests.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Application\TestFileProcessedResult.cs" />
     <Compile Include="Application\TestRecordProcessorFromFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
