added validator for incoming args as well as a System.File wrapper to allow for static Exists mocking

--- a/RecordProcessor.Console/RecordProcessor.Console.csproj
+++ b/RecordProcessor.Console/RecordProcessor.Console.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileFinder.cs" />
     <Compile Include="ConsolePrinter.cs" />
     <Compile Include="IoC\ConsoleModule.cs" />
     <Compile Include="Program.cs" />
