--- a/RecordProcessor.Application/RecordProcessor.Application.csproj
+++ b/RecordProcessor.Application/RecordProcessor.Application.csproj
@@ -35,6 +35,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -43,12 +44,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IContentFinder.cs" />
     <Compile Include="FileProcessedResult.cs" />
     <Compile Include="IoC\ApplicationModule.cs" />
     <Compile Include="IPrinter.cs" />
     <Compile Include="IRecordProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RecordProcessorFromFile.cs" />
+    <Compile Include="Validators\ArgumentsValidator.cs" />
+    <Compile Include="Validators\ValidationResult.cs" />
+    <Compile Include="Validators\IValidator.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
