--- a/RecordProcessor.UnitTests/RecordProcessor.UnitTests.csproj
+++ b/RecordProcessor.UnitTests/RecordProcessor.UnitTests.csproj
@@ -47,6 +47,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Application\TestRecordsBuilder.cs" />
+    <Compile Include="Application\Parsers\TestRecordParser.cs" />
     <Compile Include="Application\TestFileProcessedResult.cs" />
     <Compile Include="Application\TestRecordProcessorFromFile.cs" />
     <Compile Include="Application\Validators\TestArgumentsValidator.cs" />
