--- a/RecordProcessor.AcceptanceTests/RecordProcessor.AcceptanceTests.csproj
+++ b/RecordProcessor.AcceptanceTests/RecordProcessor.AcceptanceTests.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Application\TestApplication.cs" />
+    <Compile Include="PathHelperForTests.cs" />
     <Compile Include="Console\TestContainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
