--- a/RecordProcessor.Console/RecordProcessor.Console.csproj
+++ b/RecordProcessor.Console/RecordProcessor.Console.csproj
@@ -45,7 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FileFinder.cs" />
+    <Compile Include="FileHelper.cs" />
     <Compile Include="ConsolePrinter.cs" />
     <Compile Include="IoC\ConsoleModule.cs" />
     <Compile Include="Program.cs" />
