--- a/RecordProcessor.Application/RecordProcessor.Application.csproj
+++ b/RecordProcessor.Application/RecordProcessor.Application.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Parsers\IParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RecordProcessorFromFile.cs" />
+    <Compile Include="Sorters\SortMethod.cs" />
     <Compile Include="Validators\ArgumentsValidator.cs" />
     <Compile Include="Validators\ValidationResult.cs" />
     <Compile Include="Validators\IValidator.cs" />
