--- a/RecordProcessor.Application/RecordProcessor.Application.csproj
+++ b/RecordProcessor.Application/RecordProcessor.Application.csproj
@@ -56,6 +56,11 @@
     <Compile Include="Parsers\IParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RecordProcessorFromFile.cs" />
+    <Compile Include="Sorters\BirthDateSortStrategy.cs" />
+    <Compile Include="Sorters\ISortStrategyFactory.cs" />
+    <Compile Include="Sorters\LastNameSortStrategy.cs" />
+    <Compile Include="Sorters\FemalesFirstSortStrategy.cs" />
+    <Compile Include="Sorters\ISortStrategy.cs" />
     <Compile Include="Sorters\SortMethod.cs" />
     <Compile Include="Validators\ArgumentsValidator.cs" />
     <Compile Include="Validators\ValidationResult.cs" />
