setup record and sort parsers to work, updated the builder to use the parsers and then call out to have the result sorted

--- a/RecordProcessor.Application/RecordProcessor.Application.csproj
+++ b/RecordProcessor.Application/RecordProcessor.Application.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Parsers\SortMethodParser.cs" />
     <Compile Include="RecordsBuilder.cs" />
     <Compile Include="IBuilder.cs" />
     <Compile Include="Parsers\RecordParser.cs" />
