--- a/RecordProcessor.UnitTests/RecordProcessor.UnitTests.csproj
+++ b/RecordProcessor.UnitTests/RecordProcessor.UnitTests.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Application\Parsers\TestSortMethodParser.cs" />
     <Compile Include="Application\Sorters\TestBirthDateSortStrategy.cs" />
     <Compile Include="Application\Sorters\TestLastNameSortStrategy.cs" />
     <Compile Include="Application\Sorters\TestFemalesFirstSortStrategy.cs" />
