updating main runner to sort and print results, fixed some of the test data and updated acceptance tests to test full run.

--- a/RecordProcessor.AcceptanceTests/RecordProcessor.AcceptanceTests.csproj
+++ b/RecordProcessor.AcceptanceTests/RecordProcessor.AcceptanceTests.csproj
@@ -53,7 +53,7 @@
   <ItemGroup>
     <Compile Include="Application\TestApplication.cs" />
     <Compile Include="PathHelperForTests.cs" />
-    <Compile Include="Console\TestContainer.cs" />
+    <Compile Include="Console\TestProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
