--- a/RecordProcessor.UnitTests/RecordProcessor.UnitTests.csproj
+++ b/RecordProcessor.UnitTests/RecordProcessor.UnitTests.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
       <Private>True</Private>
@@ -40,6 +44,15 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.2\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web.Http, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.2\lib\net45\System.Web.Http.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,8 +60,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Api\Controllers\TestRecordsController.cs" />
     <Compile Include="Application\Domain\TestRecord.cs" />
     <Compile Include="Application\Parsers\TestSortMethodParser.cs" />
+    <Compile Include="Application\Sorters\TestDoNotSortStrategy.cs" />
     <Compile Include="Application\Sorters\TestBirthDateSortStrategy.cs" />
     <Compile Include="Application\Sorters\TestLastNameSortStrategy.cs" />
     <Compile Include="Application\Sorters\TestFemalesFirstSortStrategy.cs" />
@@ -61,9 +76,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\RecordProcessor.Api\RecordProcessor.Api.csproj">
+      <Project>{7294F337-A66A-49C5-813B-7F3415EC166B}</Project>
+      <Name>RecordProcessor.Api</Name>
+    </ProjectReference>
     <ProjectReference Include="..\RecordProcessor.Application\RecordProcessor.Application.csproj">
       <Project>{F084CEBA-B84E-4431-847E-B3105D342A10}</Project>
       <Name>RecordProcessor.Application</Name>
