hooking up repo to allow for records to be added and managed outside of the controller

--- a/RecordProcessor.Application/RecordProcessor.Application.csproj
+++ b/RecordProcessor.Application/RecordProcessor.Application.csproj
@@ -45,6 +45,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FileHelper.cs" />
+    <Compile Include="Repositories\InMemoryRecordRepository.cs" />
+    <Compile Include="Repositories\IRecordRepository.cs" />
     <Compile Include="Sorters\DoNotSortStrategy.cs" />
     <Compile Include="Parsers\SortMethodParser.cs" />
     <Compile Include="RecordsBuilder.cs" />
