added new test to exercise the api's container setup

--- a/RecordProcessor.Api/RecordProcessor.Api.csproj
+++ b/RecordProcessor.Api/RecordProcessor.Api.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="IoC\PostApplyApiModule.cs" />
     <Compile Include="IoC\ApiModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
