--- a/RecordProcessor.Application/RecordProcessor.Application.csproj
+++ b/RecordProcessor.Application/RecordProcessor.Application.csproj
@@ -60,7 +60,7 @@
     <Compile Include="IRecordProcessor.cs" />
     <Compile Include="Parsers\IParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RecordProcessorFromFile.cs" />
+    <Compile Include="RecordProcessor.cs" />
     <Compile Include="Sorters\BirthDateSortStrategy.cs" />
     <Compile Include="Sorters\ISortStrategyFactory.cs" />
     <Compile Include="Sorters\LastNameSortStrategy.cs" />
